--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/home/elliot/gitdev/wims/javax.mail.jar"/>
+	<classpathentry kind="lib" path="/home/elliot/gitdev/wims/json-simple-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
